@@ -12,6 +12,7 @@ REDHAT_BUGZILLA=1177198, 1182813, 1309524, 11319403, 1330194
   * Fixed GitHub issue #47 CHEWING_DATADIR CMake variable name mismatch
   * Fixed GitHub issue #61 GConf2 should be removed from INSTALL document
   * Fixed GitHub issue #64 systray should be able to show the Chinese/English mode
+  * Fixed GitHub issue #68 CPU usage very high when switch to Chewing Engine
   * Fixed Bug 1177198 - [abrt] ibus-chewing: XGetKeyboardControl(): ibus-engine-chewing killed by SIGSEGV								    
   * Fixed Bug 1319403 - [RFE] ibus-chewing: New option: Caps Lock behavior
     a.k.a. GitHub issue #66
